--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -47,11 +47,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "number = random.randint(1,100)\n",
+    "\n",
+    "print(\"When starting, you can input a number. If you get closer, it will say 'warmer', if you're getting away, it will say 'colder'\")\n",
+    "guessed = False\n",
+    "\n",
+    "guess = int(input())\n",
+    "how_close = abs(number - guess)\n",
+    "\n",
+    "if number == guess:\n",
+    "    print(\"Wow, you got it at first try!\")\n",
+    "    guessed = True\n",
+    "elif how_close <= 10:\n",
+    "    print(\"WARM!\")\n",
+    "else:\n",
+    "    print(\"COLD\")\n",
+    "\n",
+    "while guessed == False:\n",
+    "    guess = int(input())\n",
+    "#     print(guessed)\n",
+    "    \n",
+    "    if guess == number:\n",
+    "        print(\"YES!\")\n",
+    "        guessed == True\n",
+    "    elif abs(guess - number) >= how_close:\n",
+    "        print(\"COLDER\")\n",
+    "        how_close = abs(guess - number)\n",
+    "    elif abs(guess - number) < how_close:\n",
+    "        print(\"WARMER\")\n",
+    "        how_close = abs(guess - number)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -63,11 +93,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = int(input())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,11 +111,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "type(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,7 +183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
