--- a/03-Methods and Functions/02-Functions.ipynb
+++ b/03-Methods and Functions/02-Functions.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
     "___\n",
-    "<center><em>Content Copyright by Pierian Data</em></center>"
+    "<center><em>Content Copyrighty Pierian Data</em></center>"
    ]
   },
   {
