Update 07-args and kwargs.ipynb

--- a/03-Methods and Functions/07-args and kwargs.ipynb
+++ b/03-Methods and Functions/07-args and kwargs.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "This function returns 5% of the sum of **a** and **b**. In this example, **a** and **b** are *positional* arguments; that is, 40 is assigned to **a** because it is the first argument, and 60 to **b**. Notice also that to work with multiple positional arguments in the `sum()` function we had to pass them in as a tuple.\n",
     "\n",
-    "What if we want to work with more than two numbers? One way would be to assign a *lot* of parameters, and give each one a default value."
+    "What if we want to work with more than two numbers? One way would be to assign a *lot* of parameters, and give each one a default value.now in here the sum() function is an inbuilt funcand it needs iterables as an argument \nNow how did it work then?as we did not pass any iterable out there.\n Now when we pass multiple arguments in a function it is stored as a tuple and thats why the sum() function is working"
    ]
   },
   {
