--- a/00-Python Object and Data Structure Basics/08-Files.ipynb
+++ b/00-Python Object and Data Structure Basics/08-Files.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "Python uses file objects to interact with external files on your computer. These file objects can be any sort of file you have on your computer, whether it be an audio file, a text file, emails, Excel documents, etc. Note: You will probably need to install certain libraries or modules to interact with those various file types, but they are easily available. (We will cover downloading modules later on in the course).\n",
     "\n",
-    "Python has a built-in open function that allows us to open and play with basic file types. First we will need a file though. We're going to use some IPython magic to create a text file!\n",
+    "Python has a built-in open function that allows us to open and play with basic file types. First, we will need a file though. We're going to use some IPython magic to create a text file!\n",
     "\n",
     "## IPython Writing a File \n",
     "#### This function is specific to jupyter notebooks! Alternatively, quickly create a simple .txt file with sublime text editor."
@@ -49,7 +49,7 @@
    "source": [
     "## Python Opening a file\n",
     "\n",
-    "Let's being by opening the file test.txt that is located in the same directory as this notebook. For now we will work with files located in the same directory as the notebook or .py script you are using.\n",
+    "Let's begin by opening the file test.txt which is located in the same directory as this notebook. For now, we will work with files located in the same directory as the notebook or .py script you are using.\n",
     "\n",
     "It is very easy to get an error on this step:"
    ]
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To avoid this error,make sure your .txt file is saved in the same location as your notebook, to check your notebook location, use **pwd**:"
+    "To avoid this error, make sure your .txt file is saved in the same location as your notebook, to check your notebook location, use **pwd**:"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "source": [
     "**Alternatively, to grab files from any location on your computer, simply pass in the entire file path. **\n",
     "\n",
-    "For Windows you need to use double \\ so python doesn't treat the second \\ as an escape character, a file path is in the form:\n",
+    "For Windows, you need to use double \\ so Python doesn't treat the second \\ as an escape character, a file path is in the form:\n",
     "\n",
     "    myfile = open(\"C:\\\\Users\\\\YourUserName\\\\Home\\\\Folder\\\\myfile.txt\")\n",
     "\n",
@@ -125,7 +125,7 @@
    },
    "outputs": [],
    "source": [
-    "# Open the text.txt we made earlier\n",
+    "# Open the test.txt we made earlier\n",
     "my_file = open('test.txt')"
    ]
   },
@@ -377,7 +377,7 @@
     }
    ],
    "source": [
-    "my_file = open('test.txt','a+')\n",
+    "my_file = open('test.txt', 'a+')\n",
     "my_file.write('\\nThis is text being appended to test.txt')\n",
     "my_file.write('\\nAnd another line here.')"
    ]
@@ -454,7 +454,7 @@
    "source": [
     "## Iterating through a File\n",
     "\n",
-    "Lets get a quick preview of a for loop by iterating over a text file. First let's make a new text file with some IPython Magic:"
+    "Let's get a quick preview of a for loop by iterating over a text file. First, let's make a new text file with some IPython Magic:"
    ]
   },
   {
