Final first assigment submission

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -44,15 +44,15 @@
    "source": [
     "Double Click HERE to edit this markdown cell and write answers.\n",
     "\n",
-    "Numbers:\n",
+    "Numbers: Numbers are data type in python. It consists of both int and float type\n",
     "\n",
-    "Strings:\n",
+    "Strings: Strings are collection of character represented by single or double quotes\n",
     "\n",
-    "Lists:\n",
+    "Lists: Lists are most general version of sequence in python, mutable meaning elements can be changed represented by []\n",
     "\n",
-    "Tuples:\n",
+    "Tuples: tuples are immutable data type in Python represented by ()\n",
     "\n",
-    "Dictionaries:\n"
+    "Dictionaries: Dictonaries are unordered data types represented  by key, value pair,\n"
    ]
   },
   {
@@ -76,7 +76,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "5**2 * 8 /2 -10 + 10."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -703,20 +705,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# two nested lists\n",
     "l_one = [1,2,[3,4]]\n",
     "l_two = [1,2,{'k1':4}]\n",
     "\n",
-    "# True or False?\n",
+    "# True or False? False\n",
     "l_one[2][0] >= l_two[2]['k1']"
    ]
   },
