modification to some answers for the first assignment

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -68,16 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.25"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "5**2 * 8 /2 -10 + 10."
+    "5**2 * 8 /2 -10 + 10.25"
    ]
   },
   {
@@ -116,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,16 +408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['hello']"
+       "'hello'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +429,8 @@
     "#Grab hello\n",
     "list1 = list(d['k1'])\n",
     "d1 = list1[0]\n",
-    "d1['nest_key'][1]"
+    "d1['nest_key'][1]\n",
+    "d['k1'][0]['nest_key'][1][0]"
    ]
   },
   {
