Made changes to some answers in  the assigment

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "['hello']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,16 +452,7 @@
    "source": [
     "# This will be hard and annoying!\n",
     "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}\n",
-    "l1 = d['k1']\n",
-    "l1[2]\n",
-    "d1 = {}\n",
-    "d1 = l1[2]\n",
-    "d1\n",
-    "l2 = (d1['k2'])\n",
-    "d2 ={}\n",
-    "d2 = l2[1]\n",
-    "l3 = d2['tough']\n",
-    "l3[2]"
+    "d['k1'][2]['k2'][1]['tough'][2]"
    ]
   },
   {
