Final solution for python Assignment problems

--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -74,25 +74,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 2, 4, 6, 8]\n"
+      "[0, 2, 4, 6, 8, 10]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Code Here\n",
     "mylist= []\n",
-    "for n in range(0,10):\n",
+    "for n in range(0,12):\n",
     "    if n%2 == 0:\n",
     "        mylist.append(n)\n",
     "print(mylist)\n",
-    "        "
+    "\n",
+    "\n",
+    "#second solution\n",
+    "\n",
+    "list(range(0,11,2))"
    ]
   },
   {
