Update 01-Opening-and-Reading-Files-Folders.ipynb - Corrected spelling mistake

--- a/12-Advanced Python Modules/01-Opening-and-Reading-Files-Folders.ipynb
+++ b/12-Advanced Python Modules/01-Opening-and-Reading-Files-Folders.ipynb
@@ -605,7 +605,7 @@
    },
    "source": [
     "___\n",
-    "Excellent, you should now be aware of how to work with a computer's files and folders in whichever directory they are in. Remember that the os module works for any oeprating system that supports Python, which means these commands will work across Linux,MacOs, or Windows without need for adjustment."
+    "Excellent, you should now be aware of how to work with a computer's files and folders in whichever directory they are in. Remember that the os module works for any operating system that supports Python, which means these commands will work across Linux,MacOs, or Windows without need for adjustment."
    ]
   }
  ],
