--- a/12-Advanced Python Modules/03-Math-and-Random-Module.ipynb
+++ b/12-Advanced Python Modules/03-Math-and-Random-Module.ipynb
@@ -1145,7 +1145,7 @@
     }
    ],
    "source": [
-    "# Continuous, random picks a value between a and b, each value has equal change of being picked.\n",
+    "# Continuous, random picks a value between a and b, each value has equal chance of being picked.\n",
     "random.uniform(a=0,b=100)"
    ]
   },
